fix(CmakeLists test): add gtest tool; fix(Arparser.hpp, ArgumentParser.hpp): Git and Add methods;

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,7 +1,15 @@
+# tests/CMakeLists.txt
+
+# Находим GoogleTest
+find_package(GTest REQUIRED)
+
 add_executable(argparser_test
     argparser_test.cpp
 )
 
 target_link_libraries(argparser_test
-    argparser
+    argparser           # ваша библиотека
+    GTest::gtest_main   # ← ДОБАВЬТЕ ЭТО (предоставляет main)
+    GTest::gtest        # ← ДОБАВЬТЕ ЭТО  
+    pthread             # ← ДОБАВЬТЕ ЭТО (обязательно для gtest)
 )
