--- a/src/ArgParser/CMakeLists.txt
+++ b/src/ArgParser/CMakeLists.txt
@@ -1,6 +1,7 @@
 # Create a static library from ArgParser.cpp
 add_library(argparser STATIC
     ArgParser.cpp
+    Parse.cpp
 )
 
 target_include_directories(argparser PUBLIC
